backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vnc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /machines/connect/0f9df659-3cfa-4817-a6a4-7b91eb25d1ea
            pathType: Prefix
            backend:
              service:
                name: svc-0f9df659-3cfa-4817-a6a4-7b91eb25d1ea
                port:
                  number: 80
